# spinner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  action.yml  docker.sh  entrypoint.sh  main.cpp
common/: CMakeLists.txt  Indexes.cpp  Indexes.h  LexicographicIndexConverter.cpp  LexicographicIndexConverter.h  LexicographicIndexWorker.cpp  LexicographicIndexWorker.h  LexicographicSparseMatrix-arma-sp-mat.cpp  LexicographicSparseMatrix.h  Logger.cpp  Logger.h  Quantity.cpp  Quantity.h  Runner.cpp  Runner.h  Space.cpp  Space.h  Subspace.h
common/lexicographic/: IndexConverter.cpp  IndexConverter.h  SparseMatrix-arma-sp-mat.cpp  SparseMatrix.h
common/runner/: Runner.cpp  Runner.h
common/symbols/: SymbolName.h  Symbols.cpp  Symbols.h
components/: A.h  B.h  BaseProcessor.h  CMakeLists.txt  NonAbelianSimplifier.cpp  NonAbelianSimplifier.h  Processor.h  Subspace.h  Symmetrizer.cpp  Symmetrizer.h  Task.h  TzSorter.cpp  TzSorter.h  c2_symmetrizer.cpp  c2_symmetrizer.h  main_components.cpp  symmetrizer.cpp  symmetrizer.h  tz_sorter.cpp  tz_sorter.h
components/matrix/: MatrixBuilder.cpp  MatrixBuilder.h
components/operator/: ConstantOperator.cpp  ConstantOperator.h  Interaction.h  IsotropicExchangeHamiltonian.cpp  IsotropicExchangeHamiltonian.h  ScalarProduct.cpp  ScalarProduct.h
components/space/: NonAbelianSimplifier.h  PositiveProjectionsEliminator.h  Symmetrizer.cpp  Symmetrizer.h  TzSorter.cpp  TzSorter.h
components/spectrum/: SpectrumBuilder.cpp  SpectrumBuilder.h
entities/: BlockProperties.cpp  BlockProperties.h  CMakeLists.txt  Entity.h  Space.cpp  Space.h  Subspace.cpp  Subspace.h
entities/chiT/: ChiT.cpp  ChiT.h
entities/data_structures/: DenseMatrix.h  DenseMatrix_arma-dmat.cpp  DenseMatrix_eigen-matrix-xd.cpp  DenseVector.h  DenseVector_arma-dvec.cpp  UnitarySparseMatrix.h  UnitarySparseMatrix_arma-sp-mat.cpp  UnitarySparseMatrix_std-vector_of_arma-sp-vec.cpp  UnitarySparseMatrix_std-vector_of_std-maps.cpp  UnitarySpaseMatrix.h  UnitarySpaseMatrix_arma-sp-mat.cpp  UnitarySpaseMatrix_std-vector_of_arma-sp-vec.cpp  UnitarySpaseMatrix_std-vector_of_std-maps.cpp
entities/magnetic_susceptibility/: ChiT.cpp  ChiT.h  EnsembleAverager.cpp  EnsembleAverager.h  ExperimentalValuesWorker.cpp  ExperimentalValuesWorker.h  MuSquaredTheoretical.cpp  MuSquaredTheoretical.h  MuSquaredWorker.cpp  MuSquaredWorker.h  UniqueGOnlySSquaredMuSquaredWorker.cpp  UniqueGOnlySSquaredMuSquaredWorker.h
entities/matrix/: Matrix.cpp  Matrix.h  RawMatrixData_eigen3.cpp  RawSubmatrixData.cpp  RawSubmatrixData.h  RawSubmatrixData_armadillo.cpp  Submatrix.cpp  Submatrix.h  SubmatrixData.h  SubmatrixData_armadillo.cpp  SubmatrixData_eigen3.cpp
entities/operator/: Operator.cpp  Operator.h
entities/quantities_container/: QuantitiesContainer.h  Quantity.h
entities/space/: NewBasisDecomposition.h  NewBasisDecomposition_sparse_matrix.cpp  NewBasisDecomposition_vector_of_maps.cpp  NewBasisDecomposition_vector_of_sparse_vectors.cpp  Space.cpp  Space.h  Subspace.cpp  Subspace.h  SubspaceData.h  SubspaceData_sparse_matrix.cpp  SubspaceData_vector_of_maps.cpp  SubspaceData_vector_of_sparse_vectors.cpp
entities/spectrum/: Spectrum.cpp  Spectrum.h  Subspectrum.cpp  Subspectrum.h
examples/: CMakeLists.txt  README.md
examples/10.1021_ja0305959/: d-nit2.exp  d-nit2.h  d-nit2.yml  main.cpp
examples/10.1039_B414284E/: 3d-nit2.exp  3d-nit2.h  3d-nit2.yml  dtd-nit2.exp  dtd-nit2.h  dtd-nit2.yml  main.cpp
examples/10.1039_D0DT03184D/: main.cpp  manganese.exp  manganese_cocrystal.h  manganese_cocrystal.yml  nickel.exp  nickel_crystal.h  nickel_crystal_first_model.yml  nickel_crystal_second_model.yml  nickel_crystal_third_model.yml
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  IncorrectEnumError.h  Logger.h  MumxHash.h  OneOrMany.h  PrintingFunctions.cpp  PrintingFunctions.h  Quantity.cpp  Quantity.h  UncertainValue.cpp  UncertainValue.h
src/components/: CMakeLists.txt
src/eigendecompositor/: AbstractEigendecompositor.cpp  AbstractEigendecompositor.h  AllQuantitiesGetter.h  CMakeLists.txt  EigendecompositorConstructor.cpp  EigendecompositorConstructor.h  ExactEigendecompositor.cpp  ExactEigendecompositor.h  ExplicitQuantitiesEigendecompositor.cpp  ExplicitQuantitiesEigendecompositor.h  FTLMEigendecompositor.cpp  FTLMEigendecompositor.h  FTLMImplicitQuantityEigendecompositor.cpp  FTLMImplicitQuantityEigendecompositor.h  FlattenedSpectra.cpp  FlattenedSpectra.h  ImplicitQuantityEigendecompositor.cpp  ImplicitQuantityEigendecompositor.h  ImplicitSSquareEigendecompositor.cpp  ImplicitSSquareEigendecompositor.h  OneSymbolInHamiltonianEigendecompositor.cpp  OneSymbolInHamiltonianEigendecompositor.h
src/entities/: BlockProperties.cpp  BlockProperties.h  CMakeLists.txt
src/group/: AlgebraicProperties.cpp  CMakeLists.txt  Group.cpp  Group.h
src/input/: CMakeLists.txt  ControlParser.cpp  ControlParser.h  JobParser.cpp  JobParser.h  ModelInputParser.cpp  ModelInputParser.h  OptimizationsParser.cpp  OptimizationsParser.h  Parser.cpp  Parser.h  Tools.cpp  Tools.h
src/model/: CMakeLists.txt  Model.cpp  Model.h  ModelInput.cpp  ModelInput.h  NumericalParameters.h
src/nonlinear_solver/: AbstractNonlinearSolver.h  CMakeLists.txt
src/space/: CMakeLists.txt  Space.h  (+3 more)
test/: CMakeLists.txt  PerformanceTest.cpp  Runner.h  group_test.cpp  hamiltonian_operator_tests.cpp  interactions_test.cpp  magnetic_susceptibility_tests.cpp  matrix_and_spectrum_builders_tests.cpp  matrix_builder.cpp  non_abelian_simplifier_tests.cpp  non_hamiltonian_operators_tests.cpp  spectrum_final_equivalence_tests.cpp  symbols_tests.cpp  symmetrizer_tests.cpp
tests/: CMakeLists.txt  PerformanceTest.cpp  blm_unittest.cpp  consistentModelOptimizationList_tests.cpp  hamiltonian_operator_tests.cpp  interactions_test.cpp  magnetic_susceptibility_tests.cpp  main.cpp  matrices_unittest.cpp  matrix_and_spectrum_builders_tests.cpp  non_abelian_simplifier_tests.cpp  non_hamiltonian_operators_tests.cpp  spectrum_final_equivalence_tests.cpp  symbols_tests.cpp  symmetrizer_tests.cpp
(+436 files in other folders)
