add_subdirectory(common)
add_subdirectory(eigendecompositor)
add_subdirectory(entities)
add_subdirectory(group)
add_subdirectory(input)
add_subdirectory(model)
add_subdirectory(nonlinear_solver)
add_subdirectory(space)
add_subdirectory(spin_algebra)

add_executable(spinner_main main.cpp)
target_link_libraries(spinner_main input)